--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "start": "remix-serve build"
   },
   "dependencies": {
-    "@prisma/client": "^4.7.1",
     "@remix-run/node": "^1.8.0",
     "@remix-run/react": "^1.8.0",
     "@remix-run/serve": "^1.8.0",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "remix-auth": "^3.4.0",
-    "remix-auth-socials": "^1.0.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.8.0",
@@ -24,13 +21,9 @@
     "@types/react-dom": "^18.0.8",
     "dotenv-cli": "^6.0.0",
     "eslint": "^8.27.0",
-    "prisma": "^4.7.1",
     "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
-  },
-  "prisma": {
-    "schema": "prisma/schema.prisma"
   }
 }
